# YandexAlgoTrain_3

./: README.md
Stack/: .gitignore  CMakeLists.txt  task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp
additional/: task_1.cpp  task_10.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp  task_6.cpp  task_7.cpp  task_8.cpp  task_9.cpp
breadth-first graph traversal/: CMakeLists.txt  task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp
dynamic programming with one parameter/: CMakeLists.txt  task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp
dynamic programming with two parameters/: CMakeLists.txt  task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp
graph traversal in depth/: CMakeLists.txt  task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp
queues, decks, and priority queues/: CMakeLists.txt  task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp
